<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="448dp"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileImageViewNew"
        app:layout_constraintHorizontal_bias="0.699"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profileImageViewNew"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="68dp"
        android:contentDescription="@string/profile_picture_new"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changeProfileImageButton"
        android:layout_width="276dp"
        android:layout_height="53dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        android:text="@string/cambiar_foto"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageViewNew" />

    <TextView
        android:id="@+id/photoActualTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/foto_actual"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profileImageView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/photoNewTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/foto_nueva"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profileImageView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/correo_electr_nico"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeProfileImageButton" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:autofillHints="name"
        android:hint="@string/nombre_complete"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:autofillHints="phone"
        android:hint="@string/n_mero_de_tel_fono"
        android:inputType="phone"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/nombre"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/n_mero_de_tel_fono_edit"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:autofillHints="emailAddress"
        android:hint="@string/correo_electr_nico_edt_text"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <Button
        android:id="@+id/saveProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="76dp"
        android:background="@color/white"
        android:text="@string/guardar_cambios"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
