<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.StudentActivity">

    <LinearLayout
        android:id="@+id/studentHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start|center_vertical">

        <ImageView
            android:id="@+id/ivStudentFoto"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/circular_border"
            android:contentDescription="@string/student_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvStudentNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_student"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStudentApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname_student"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvStudentCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade_student"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginStart="12dp"
            android:gravity="end"
            android:textStyle="italic"/>
    </LinearLayout>

    <android.widget.CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentHeader" />

    <TextView
        android:id="@+id/tvEventos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fuentemoderniz"
        android:text="@string/eventOfDay"
        android:textColor="@color/blue_darker"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarView" />

    <TextView
        android:id="@+id/tvEventosDelDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEventos" />

    <ListView
        android:id="@+id/lvHorario"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEventosDelDia" />
    <ListView
        android:id="@+id/lvEventos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEventosDelDia" />

</androidx.constraintlayout.widget.ConstraintLayout>
